# SS2026-INENI-ParkingLot

./: .gitignore  AGENT.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  architecture.py
infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
infra/lambdas/control/: _timestamps.py  handler.py
infra/lambdas/get_history/: handler.py
infra/lambdas/get_snapshot/: handler.py
infra/parking_lot_cdk/: __init__.py  parking_lot_dns_stack.py  parking_lot_stack.py  parking_lot_web_stack.py
infra/scripts/: build_simulator_cmd.py  deploy_web.py  fetch_certs.py
parking_lot/: coordinates_generator.py  display_window.py  dynamodb_publisher.py  iot_publisher.py  main.py  motion_detector.py  setup.py  simulator.py  timestamp.py  webcam_controls.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: config.example.json
web/src/: App.tsx  ParkingLotPage.tsx  index.css  main.tsx  types.ts
web/src/components/: ConnectionPill.tsx  MqttConsole.tsx  SparklineHistory.tsx  SpotGrid.tsx  SummaryTiles.tsx  ThemeToggle.tsx
web/src/context/: ThemeContext.tsx
web/src/lib/: api.ts  cognito.ts  config.ts  history.ts  historyChart.ts  mode.ts  mqtt.ts  mqttLog.ts  sigv4.ts  state.ts  theme.ts  timestamp.ts
