[project]
name = "parking-lot"
version = "0.2.0"
description = "OpenCV parking-space occupancy detector with optional AWS IoT publishing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "PyYAML>=6.0",
    "awsiotsdk>=1.21",
    "boto3>=1.34",
]

[tool.uv]
package = false
