[project]
name = "parking-lot-infra"
version = "0.1.0"
description = "AWS CDK infrastructure for the parking-lot IoT detector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-cdk-lib>=2.140.0",
    "constructs>=10.0.0",
]

[dependency-groups]
dev = [
    "boto3>=1.34.0",
    "PyYAML>=6.0",
    "awsiotsdk>=1.21",
]
